--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -57,8 +57,9 @@ jobs:
    - name: Build caontainer image
      uses: docker/build-push-action@v2
      with:
-      username: ${{github.actor}}
-      password: ${{secrets.GITHUB_TOKEN}}
-      registry: docker.pkg.github.com
-      repsoitory: craiglyit/logbook3/tic-tac-toe
-      tag_with_sha: true
+       username: ${{github.actor}}
+       password: ${{secrets.GITHUB_TOKEN}}
+       registry: docker.pkg.github.com
+       repsoitory: docmilo/dockerpackagesdemo/tic-tac-toe
+       #craiglyit/logbook3/tic-tac-toe
+       tag_with_sha: true
