--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -60,6 +60,7 @@ jobs:
        username: ${{github.actor}}
        password: ${{secrets.GITHUB_TOKEN}}
        registry: docker.pkg.github.com
-       repsoitory: docmilo/dockerpackagesdemo/tic-tac-toe
+       repsoitory: craiglyit/logbook3/tic-tac-toe
+       #docmilo/dockerpackagesdemo/tic-tac-toe
        #craiglyit/logbook3/tic-tac-toe
        tag_with_sha: true
