--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -44,23 +44,23 @@ jobs:
   Build-and-Push-Docker-Image:
    runs-on: ubuntu-latest
    needs: test
-   name: Docker build, tag, push
+   name: Docker Build, Tag, Push
   
    steps:
    - name: Checkout
      uses: actions/checkout@v2
-   - name: Download build artifact
+   - name: Download built artifact
      uses: actions/download-artifact@main
      with:
        name: webpack artifacts
        path: public
-   - name: Build caontainer image
+   - name: Build container image
      uses: docker/build-push-action@v2
      with:
        username: ${{github.actor}}
        password: ${{secrets.GITHUB_TOKEN}}
        registry: docker.pkg.github.com
-       repsoitory: craiglyit/logbook3/tic-tac-toe
+       repsoitory: craiglyit/logbook3/tic-tac-toe2
        #docmilo/dockerpackagesdemo/tic-tac-toe
        #craiglyit/logbook3/tic-tac-toe
        tag_with_sha: true
