--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -1,94 +1,3 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-name: Create and publish a Docker image
-
-on:
-  push:
-    branches: ['release']
-
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
-
-jobs:
-  build-and-push-image:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Log in to the Container registry
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-        with:
-          context: .
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-  name: Create and publish a Docker image
-
-  on:
-  push:
-    branches: ['release']
-
-  env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
-
-  jobs:
-   build-and-push-image:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Log in to the Container registry
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-        with:
-          context: .
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-#old
 name: Node CI
 
 on: [push]
@@ -136,31 +45,110 @@ jobs:
         env:
           CI: true
 
-  Build-and-Push-Docker-Image:
-   runs-on: ubuntu-latest
-   needs: test
-   #new
-   permissions:
+  build-and-push-image:
+    runs-on: ubuntu-latest
+    needs: test
+    permissions:
       contents: read
       packages: write
-  #end new
-   name: Docker Build, Tag, Push
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Log in to the Container registry
+        uses: docker/login-action@49ed152c8eca782a232dede0303416e8f356c37b
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@69f6fc9d46f2f8bf0d5491e4aabe0bb8c6a4678a
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@e551b19e49efd4e98792db7592c17c09b89db8d8
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+#old
+# name: Node CI
+
+# on: [push]
+
+# env:
+#   REGISTRY: ghcr.io
+#   IMAGE_NAME: ${{ github.repository }}
+
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - uses: actions/checkout@v3
+#       - name: npm install and build webpack
+#         run: |
+#           npm install
+#           npm run build
+#       - uses: actions/upload-artifact@master
+#         with:
+#           name: webpack artifacts
+#           path: public/
+#   test:
+#     runs-on: ubuntu-latest
+#     needs: build
+#     strategy:
+#       matrix:
+#         os: [ubuntu-lastest, windows-2016]
+#         node-version: [12.x, 14.x]
+
+#     steps:
+#       - uses: actions/checkout@v3
+#       - name: Use Node.js ${{ matrix.node-version }}
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: ${{ matrix.node-version }}
+#       - uses: actions/download-artifact@master
+#         with:
+#           name: webpack artifacts
+#           path: public
+#       - name: npm install, and test
+#         run: |
+#           npm install
+#           npm test
+#         env:
+#           CI: true
+
+#   Build-and-Push-Docker-Image:
+#    runs-on: ubuntu-latest
+#    needs: test
+#    #new
+#    permissions:
+#       contents: read
+#       packages: write
+#   #end new
+#    name: Docker Build, Tag, Push
   
-   steps:
-   - name: Checkout
-     uses: actions/checkout@v3
-   - name: Download built artifact
-     uses: actions/download-artifact@main
-     with:
-       name: webpack artifacts
-       path: public
-   - name: Build container image
-     uses: docker/build-push-action@v3
-     with:
-       username: ${{github.actor}}
-       password: ${{secrets.GITHUB_TOKEN}}
-       registry: docker.pkg.github.com
-       repsoitory: craiglyit/logbook3/tic-tac-toe
-       #docmilo/dockerpackagesdemo/tic-tac-toe
-       #craiglyit/logbook3/tic-tac-toe
-       tag_with_sha: true
+#    steps:
+#    - name: Checkout
+#      uses: actions/checkout@v3
+#    - name: Download built artifact
+#      uses: actions/download-artifact@main
+#      with:
+#        name: webpack artifacts
+#        path: public
+#    - name: Build container image
+#      uses: docker/build-push-action@v3
+#      with:
+#        username: ${{github.actor}}
+#        password: ${{secrets.GITHUB_TOKEN}}
+#        registry: docker.pkg.github.com
+#        repsoitory: craiglyit/logbook3/tic-tac-toe
+#        #docmilo/dockerpackagesdemo/tic-tac-toe
+#        #craiglyit/logbook3/tic-tac-toe
+#        tag_with_sha: true
